--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,7 @@
   --yellow-fade: #fbfff0;
   --fade-purple: #f3f0ff;
   --black: #000000;
+  --font-black: #212D37
   --red: #ff7272;
 }
 
@@ -731,6 +732,7 @@ main {
   padding: 10px;
 }
 .date-picker {
+  color: var(--font-black);
   width: 300px;
   height: 40px;
   display: flex;
@@ -745,7 +747,7 @@ main {
   font-size: 16px;
   font-weight: 500;
   width: 90px;
-  color: #9b9b9b;
+  color: var(--font-black);
   background: #f3f3f3;
   cursor: pointer;
 }
@@ -756,9 +758,17 @@ main {
 }
 .date-icon {
   padding: 10px;
+  cursor: pointer;
 }
-.date-range{
-  
+.date-icon svg{
+  stroke: #848484;
+}
+.date-icon svg:hover{
+  stroke: var(--primary);
+}
+.date-icon-active svg{
+  stroke: var(--primary);  
+
 }
 
 /* Dashboard start */
