--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -100,23 +100,7 @@
 
   
 }
-  input[type="date"]::before {
-	color: #999999;
-	content: attr(placeholder);
-  border: none;
-}
-input[type="date"] , input[type="date"]:focus {
-	color: #ffffff;
-  outline: none;
-}
-input[type="date"]:focus,
-input[type="date"]:valid {
-	color: #666666;
-}
-input[type="date"]:focus::before,
-input[type="date"]:valid::before {
-	content: "" !important;
-}
+
 
 
 </style>
@@ -134,7 +118,7 @@ input[type="date"]:valid::before {
         />
     <%} else{%>
       <img
-      src="/uploads/avatars/<%userInfo.avatar===null ? 'demo-avatar.png' : userInfo.avatar %>/>"
+      src="/uploads/avatars/<%userInfo.avatar===null ? 'demo-avatar.png' : userInfo.avatar %>" />
       <% } %> 
  
   </div>
@@ -299,9 +283,10 @@ input[type="date"]:valid::before {
     <h4>Reports</h4>
     <p>Last seven days.</p>
   </div>
-  <div class="date-picker">
-      <div class="start-date">
+  <div  class="date-picker">
+      <div  class="start-date">
         <input
+        onblur="iconCheck()"
           id="startPicker"
           type="text"
           placeholder="-- / -- / ----"
@@ -309,7 +294,7 @@ input[type="date"]:valid::before {
       </div>
       <div class="to">to</div>
       <div class="end-date">
-        <input id="endPicker" placeholder="-- / -- / ----" />
+        <input onblur="iconCheck()" id="endPicker" placeholder="-- / -- / ----" />
       </div>
       <div id="date-icon" onclick="dateRange()" class="date-icon">
         <svg
@@ -321,7 +306,6 @@ input[type="date"]:valid::before {
         >
           <path
             d="M7.66667 1.66675V5.66675V1.66675ZM18.3333 1.66675V5.66675V1.66675ZM1.66667 11.1201H24.3333H1.66667ZM25 10.3334V21.6667C25 25.6667 23 28.3334 18.3333 28.3334H7.66667C3 28.3334 1 25.6667 1 21.6667V10.3334C1 6.33341 3 3.66675 7.66667 3.66675H18.3333C23 3.66675 25 6.33341 25 10.3334Z"
-            stroke="#848484"
             stroke-width="2"
             stroke-miterlimit="10"
             stroke-linecap="round"
@@ -329,7 +313,6 @@ input[type="date"]:valid::before {
           />
           <path
             d="M8.05859 21.2666H8.07193M17.9266 17.2666H17.9386H17.9266ZM17.9266 21.2666H17.9386H17.9266ZM12.9933 17.2666H13.0066H12.9933ZM12.9933 21.2666H13.0066H12.9933ZM8.05859 17.2666H8.07193H8.05859Z"
-            stroke="#848484"
             stroke-width="2.66667"
             stroke-linecap="round"
             stroke-linejoin="round"
@@ -433,6 +416,16 @@ input[type="date"]:valid::before {
       });
 ;
 
+// Date change to date icon active remove
+
+function iconCheck(e){
+  const dateIcon = document.querySelector("#date-icon")
+  const data = dateIcon.classList.contains('date-icon-active')
+  if(data){
+    return dateIcon.classList.remove("date-icon-active")
+  }
+}
+
 // getDate format
 function getDateFormat(date) {
   if(date===null){
@@ -459,6 +452,7 @@ console.log({today})
 
 
 const dateRange = async function (event) {
+  const dateIcon = document.querySelector("#date-icon")
   const dateStart = document.querySelector("#startPicker")
   const dateEnd = document.querySelector("#endPicker")
   const startDate = getDateFormat (startDatePicker.getFullDate())
@@ -467,8 +461,10 @@ const dateRange = async function (event) {
 
   dateStart.dataset.date = startDate
   dateEnd.dataset.date = endDate
-console.log(startDate)
-console.log(endDate)
+
+  if(dateStart.dataset.date=='null'){
+    return alert('date not select')
+  }
 
   const data = await fetch(
     `${baseUrl}/reports/between/two-date?startDate=${startDate}&endDate=${endDate}`,
@@ -481,6 +477,7 @@ console.log(endDate)
   const reportTableBody = document.querySelector('#an-user-report')
   reportShow(reportTableBody,dateRangeReport)
   pagination(pageNumber,numberOfPage,page)
+  dateIcon.classList.add("date-icon-active")
   // const pagination = document.querySelector('#pagination')
   // pagination.innerHTML = pageNumber.map(p =>`<a class=${ page==p ? 'page-active' : ''} ><li onclick="page(${p})">  ${p}  </li></a>`).join('')
 }
@@ -539,7 +536,8 @@ function pagination(pageNumber,numberOfPage,page){
  <li class="last" onclick="page(${numberOfPage})"></li> 
  `
 
-}
+} 
+
 </script>
 
 <%- include("../partials/footer"); -%>
