--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="<%=baseUrl%>/style.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/modal.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/responsive.css" />
+    <link rel="stylesheet" href="<%=baseUrl%>/dist/mc-calendar.min.css"/>
+    <script src="<%=baseUrl%>/dist/mc-calendar.min.js"></script>
   </head>
   <body>
     <%- include("./nav.ejs"); -%>
