--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -102,20 +102,7 @@
 }
 
 
-.filtered-report{
-  background: #f3f3f3;
-  border-radius: 22px;
-  padding: 15px 30px;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-  display: none;
 
-}
-.filtered-report .box{
-  background-color: #f3f3f3;
-  border: none;
-}
 </style>
 
 <!--  Markup for an  employee report-->
@@ -189,8 +176,7 @@
         <table class="work">
           <tr>
             <td>Work:</td>
-            <td><%= todayReportDetails.todayTotal || "00:00" %> hr <span 
-              class="<%= todayReportDetails.totalLess ? 'low' : 'high' %>"><%=   todayReportDetails.totalLess ?  todayReportDetails.totalLess    : '+' + todayReportDetails.totalExtra %> hr</span></td>
+            <td><%= todayReportDetails.todayTotal || "00:00" %> hr <span class="high">+ 15</span></td>
           </tr>
           <tr>
             <td>Time:</td>
@@ -212,14 +198,11 @@
         <table>
           <tr>
             <td>Workday:</td>
-          
-
-            <td><%= weekReportDetails.day %>/6 day <span class="<%= Number(6) >  Number(weekReportDetails.day)   ? 'low'  :   Number(6 == weekReportDetails.day) ?  '' : 'high' %>">
-            <%= Number(6) >  Number(weekReportDetails.day)   ? '-' + Number( 6 - weekReportDetails.day)  :   Number(6 == weekReportDetails.day) ?  '' :    '+' + Number(weekReportDetails.day - 6) %></span></td>
+            <td><%= weekReportDetails.day %>/6 day <span class="low">- 2</span></td>
           </tr>
           <tr>
             <td>Work hour:</td>
-            <td><%= weekReportDetails.workHour%>/<%= weekReportDetails.fixedTotalHour   %> hr<span class="<%= weekReportDetails.totalLess ? 'low' : 'high' %>"><%= weekReportDetails.totalLess ?  weekReportDetails.totalLess  : '+' + weekReportDetails.totalExtra %> hr</span></td>
+            <td><%= weekReportDetails.workHour%>/<%= weekReportDetails.fixedTotalHour   %> hr</td>
           </tr>
           <tr>
             <td>Avg Work:</td>
@@ -242,15 +225,11 @@
         <table>
           <tr>
             <td>Workday:</td>
-            <td> <%=monthReportDetails.day %>/26 day <span class="<%= Number(26) >  Number(monthReportDetails.day)   ? 'low'  :   Number(26 == monthReportDetails.day) ?  '' : 'high' %>">
-            <%= Number(26) >  Number(monthReportDetails.day)   ? '-' + Number( 26 - monthReportDetails.day)  :   Number(26 == monthReportDetails.day) ?  '' :    '+' + Number(monthReportDetails.day - 26) %></span> </td>
+            <td> <%=monthReportDetails.day %>/6 day</td>
           </tr>
           <tr>
             <td>Work hour:</td>
-            <td><%=monthReportDetails.workHour  + '/' + monthReportDetails.fixedTotalHour %><span class="<%= monthReportDetails.totalLess ? 'low' : 'high' %>"><%= monthReportDetails.totalLess ?  monthReportDetails.totalLess  : '+' + monthReportDetails.totalExtra %> hr</span></td>
-
-
-            
+            <td><%=monthReportDetails.workHour  + '/' + monthReportDetails.fixedTotalHour %> hr</td>
           </tr>
           <tr>
             <td>Avg Work:</td>
@@ -273,7 +252,7 @@
         <table>
           <tr>
             <td>Workday:</td>
-            <td><%= yearReportDetails.day %>/300 day <span class="<%= yearReportDetails.totalLess ? 'low' : 'high' %>"><%= yearReportDetails.totalLess ?  yearReportDetails.totalLess  : '+' + yearReportDetails.totalExtra %> hr</span></td>
+            <td><%= yearReportDetails.day %>/6 day</td>
           </tr>
           <tr>
             <td>Work hour:</td>
@@ -297,7 +276,6 @@
   </div>
 
 
-  
 <!-- Markup Date range for employee-->
 
 <div class="date-range-input">
@@ -343,27 +321,6 @@
       </div>
     </div>
 </div>
-
-<!-- Markup for filtered  report   box -->
-
-<div class="filtered-report">
-
-   
- <div class="week box">
-   <h2>Filtered by</h2>
-   <div class="details">
-     <table id="total-report">
-     
-     </table>
-   </div>
-
- 
- </div>
-
- <div class="filtered-date">
-   <p><span class="select-start-date">/01/2022</span> to  <span class="select-end-date">/01/2022</span> </p>
- </div>
- </div>
 
 <!-- Markup for report table  -->
 <div class="an-employee-report">
@@ -421,7 +378,7 @@
       
     </tbody>
     <!-- Table footer -->
-    <!-- <tfoot id="last-seven-days-total" class="an-employee-report">
+    <tfoot id="last-seven-days-total" class="an-employee-report">
       <% employeeLastSevendaysReportTotal.map(el => {%> 
      
 
@@ -435,11 +392,10 @@
         <td class="p-3"><%= el.totalLessORExtra === 'NaN:NaN:NaN' ? '00' : el.totalLessORExtra %></td> 
       </tr>
     <% })  %> 
-    </tfoot> -->
+    </tfoot>
   </table>
 </div>
 
- 
 </div>
 <div class="pagination" >
   <ul id="pagination">
@@ -448,23 +404,17 @@
 </div>
 
 <script>
-  function workHourFormater(time) {
-  if (time == null) return '0'
-  const s = time.split(':')
-  const hour = `${s[0]}`
-  const isZero = hour[0]
-  const minutes = `${s[1]}`
-  const result = `${isZero === '0' ? hour.replace(isZero, ' ') : hour}:${minutes}`
-  const mintIsZeor = result.slice(2, 5)
-  const withOutZeroResult = result.replace(mintIsZeor, ' ')
-  return (mintIsZeor === ':00') ? withOutZeroResult : result;
-}
-
-
   const baseUrl = 'http://localhost:5000';
 
-// get start date
-let startDate;
+  const startDatePicker = MCDatepicker.create({
+        el: "#startPicker",
+        dateFormat: "DD-MM-YYYY",
+      });
+  const endDatePicker = MCDatepicker.create({
+        el: "#endPicker",
+        dateFormat: "DD-MM-YYYY",
+      });
+;
 
 // Date change to date icon active remove
 
@@ -499,22 +449,7 @@ console.log({today})
 
     return today;
   }
-  //console.log(getCurrentDate());
-// constructor function
-function ReportDetails(day, fixedTotalHour, workHour, avgWorkHour, avgStartTime, avgEndTime) {
-  this.day = day
-  this.fixedTotalHour = fixedTotalHour
-  this.workHour = workHour
-  this.avgWorkHour = avgWorkHour
-  this.avgStartTime = avgStartTime
-  this.avgEndTime = avgEndTime
-}
 
-const selectStartDate = async function (event) {
-  const dateStart = document.querySelector("#dateStart")
-  const dateEnd = document.querySelector("#dateEnd")
-  const getDate = getDateFormat(event.target.value);
-  //console.log(event.target.value)
 
 const dateRange = async function (event) {
   const dateIcon = document.querySelector("#date-icon")
@@ -531,71 +466,11 @@ const dateRange = async function (event) {
     return alert('date not select')
   }
 
-   dateStart.dataset.date = event.target.value;
-   dateEnd.dataset.date = getCurrentDate();
   const data = await fetch(
-    `${baseUrl}/reports/between/two-date?startDate=${startDate}&endDate=${getCurrentDate()}`,
+    `${baseUrl}/reports/between/two-date?startDate=${startDate}&endDate=${endDate}`,
   );
   const getObjects = await data.json(); 
-
-  //========== date range total  
-  console.log(getObjects.reportDateRangeTotal.betweenTowDateTotalToJson)
-  const [{day,weekTotal, fixed_total,
-  
-    avgWorkHour, avgStartTime, avgEndTime}] = getObjects.reportDateRangeTotal.betweenTowDateTotalToJson;
-  //console.log(present,weekTotal, fixed_total, avgStartTime, avgEndTime)
-  const dateRangeTotal = new ReportDetails(
-    day,
-    fixed_total,
-    weekTotal,
-    avgWorkHour,
-    avgStartTime,
-    avgEndTime,
-  );
-  console.log(dateRangeTotal !== null)
-  console.log(dateRangeTotal.avgEndTime)
-
-  const totalReport = document.getElementById("total-report");
-  const filteredReport = document.querySelector('.filtered-report');
-  const selectStartDate = document.querySelector('.select-start-date');
-  const selectEndDate = document.querySelector('.select-end-date');
-
-console.log("mmmmmmmm", dateRangeTotal === null);
-
-  console.log(filteredReport)
-   if(dateRangeTotal === null){
-        filteredReport.style.display = 'none !important';
-   }else{
-     filteredReport.style.display = 'block';
-     filteredReport.style.display = 'flex';
-     selectStartDate.textContent = getDate
-      selectEndDate.textContent = getCurrentDate()
-  totalReport.innerHTML = `
-
-      <tr>
-          <td>Workday:</td>
-          <td> ${dateRangeTotal.day }/6 day <span class="low">- 2</span></td>
-        </tr>
-        <tr>
-          <td>Work hour:</td>
-          <td>${dateRangeTotal.workHour }/${ dateRangeTotal.fixedTotalHour} hr</td>
-        </tr>
-        <tr>
-          <td>Avg Work:</td>
-          <td> ${ dateRangeTotal.avgWorkHour } hr</td>
-        </tr>
-        <tr>
-          <td>Avg Start:</td>
-          <td>${dateRangeTotal.avgStartTime } </td>
-        </tr>
-        <tr>
-          <td>Avg End:</td>
-          <td>${ dateRangeTotal.avgEndTime } </td>
-        </tr>
-  `
-      }
-  //
-
+  // let isZero;
   const {dateRangeReport,pageNumber,pageLength,page,numberOfPage} = getObjects.reports
   console.log({pageNumber,page,pageLength,numberOfPage})
   console.log(dateRangeReport)
@@ -608,10 +483,10 @@ console.log("mmmmmmmm", dateRangeTotal === null);
 }
 
 async function page(pageNo){
-  const dateStart = document.querySelector("#dateStart").dataset.date
-  const dateEnd = document.querySelector("#dateEnd").dataset.date
+  const startDate = document.querySelector("#startPicker").dataset.date
+  const endDate = document.querySelector("#endPicker").dataset.date
   const data = await fetch(
-    `${baseUrl}/reports/between/two-date?startDate=${startDate}&endDate=${getCurrentDate()}&page=${pageNo}`,
+    `${baseUrl}/reports/between/two-date?startDate=${startDate}&endDate=${endDate}&page=${pageNo}`,
   );
   const getObjects = await data.json(); 
   // let isZero;
@@ -661,84 +536,6 @@ function pagination(pageNumber,numberOfPage,page){
  <li class="last" onclick="page(${numberOfPage})"></li> 
  `
 
-}
-
-// when select end date 
-const selectEndDate = async (event) => {
-  const dateStart = document.querySelector("#dateStart")
-  const dateEnd = document.querySelector("#dateEnd")
-  const endDate = event.target.value;
-
-  console.log('end date', endDate);
-  const data = await fetch(
-    `${baseUrl}/reports/between/two-date?startDate=${startDate}&endDate=${endDate}`,);
-  const getObjects = await data.json();
-  console.log("xxxx",getObjects)
-   //========== date range total  
-   console.log(getObjects.reportDateRangeTotal.betweenTowDateTotalToJson)
-  const [{day,weekTotal, fixed_total,
-  
-    avgWorkHour, avgStartTime, avgEndTime}] = getObjects.reportDateRangeTotal.betweenTowDateTotalToJson;
-  //console.log(present,weekTotal, fixed_total, avgStartTime, avgEndTime)
-  const dateRangeTotal = new ReportDetails(
-    day,
-    fixed_total,
-    weekTotal,
-    avgWorkHour,
-    avgStartTime,
-    avgEndTime,
-  );
- console.log({dateRangeTotal})
-  
-  const totalReport = document.getElementById("total-report");
-  const filteredReport = document.querySelector('.filtered-report');
-  const selectStartDate = document.querySelector('.select-start-date');
-  const selectEndDate = document.querySelector('.select-end-date');
-
-
-
-  console.log(filteredReport)
-   if(dateRangeTotal === null){
-        filteredReport.style.display = 'none !important';
-   }else{
-     filteredReport.style.display = 'block';
-     filteredReport.style.display = 'flex';
-      selectEndDate.textContent = endDate;
-  totalReport.innerHTML = `
-
-      <tr>
-          <td>Workday:</td>
-          <td> ${dateRangeTotal.day }/6 day <span class="low">- 2</span></td>
-        </tr>
-        <tr>
-          <td>Work hour:</td>
-          <td>${dateRangeTotal.workHour }/${ dateRangeTotal.fixedTotalHour} hr</td>
-        </tr>
-        <tr>
-          <td>Avg Work:</td>
-          <td> ${ dateRangeTotal.avgWorkHour } hr</td>
-        </tr>
-        <tr>
-          <td>Avg Start:</td>
-          <td>${dateRangeTotal.avgStartTime } </td>
-        </tr>
-        <tr>
-          <td>Avg End:</td>
-          <td>${ dateRangeTotal.avgEndTime } </td>
-        </tr>
-  `
-}
-
-//========== date range report data and pagination
-
-const {dateRangeReport,pageNumber,pageLength,page,numberOfPage} = getObjects.reports
-  console.log({pageNumber,page,pageLength,numberOfPage})
-  console.log(dateRangeReport)
-  const reportTableBody = document.querySelector('#an-user-report')
-  reportShow(reportTableBody,dateRangeReport)
-  pagination(pageNumber,numberOfPage,page)
-          
-  } 
 } 
 
 </script>
