--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@
   --yellow-fade: #fbfff0;
   --fade-purple: #f3f0ff;
   --black: #000000;
-  --font-black: #212D37
+  --font-black: #212D37;
   --red: #ff7272;
 }
 
