update for report box

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -84,7 +84,7 @@
 </style>
 <div id="profile">
   <div class="container">
-    <form   id=form">
+    <form   id="form">
       <div class="profile-avatar-img">
         
         <% if(avatar !== null && avatar.match(/^(http|https):/g)){ %>
