--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -9,6 +9,10 @@
     transition: max-height 0.4s;
     position: relative;
   }
+  .hidden-menu ul li a {
+    text-decoration: none !important;
+    color: #000 !important;
+  }
 
   /* .hidden-menu-show {
     max-height: 130px;
@@ -44,6 +48,7 @@
     list-style: none;
     line-height: 20px;
   }
+
   .hidden-menu-show li a svg {
     /* width: 32px;
   height: 32px; */
@@ -136,7 +141,7 @@
                 </a>
               </li>
               <li>
-                <a href="/profile">
+                <a href="/profile/<%= user.id %>">
                   <%# include("./icons/profile-svg.ejs"); -%>
                   <span>Profile</span>
                 </a>
@@ -164,33 +169,6 @@
       </tr>
 
       <%}) %>
-
-      <!-- <tr>
-        <td class="table-img td-width-zero">
-          <img
-            src="https://gravatar.com/avatar/b8e1fd79796a3a262ad0bb94517658d9?s=200&d=robohash&r=x"
-            alt=""
-          />
-        </td>
-        <td>gazi rahad</td>
-        <td class="user-phone">+8801534754667</td>
-        <td class="user-email">gaziiiiiiiii@mail.com</td>
-        <td class="user-status"><span class="status active">Active</span></td>
-        <td class="user-more td-width-zero">
-          <svg
-            width="40"
-            height="40"
-            viewBox="0 0 40 40"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <rect width="40" height="40" rx="15" />
-            <circle cx="10" cy="20" r="2" fill="#4A4A4A" />
-            <circle cx="20" cy="20" r="2" fill="#4A4A4A" />
-            <circle cx="30" cy="20" r="2" fill="#4A4A4A" />
-          </svg>
-        </td>
-      </tr> -->
     </tbody>
   </table>
 </div>
